<resources>
    <string name="app_name">Book Tracker</string>
    <string name="add_book_btn_str">Add Book</string>
    <string name="favorites_btn_str">Favorites</string>
    <string name="all_books_btn_str">All Books</string>
    <string name="no_books_in_library">No Books in Library</string>
    <string name="cancel">Cancel</string>
    <string name="scan_a_barcode">Scan a barcode</string>
    <string name="cancel_scan">Cancel</string>
    <string name="close">Close</string>
    <string name="is_this_the_correct_book">Is this the correct book?</string>
    <string name="publish_year_s">Publish Year: %s</string>
    <string name="enter_isbn">Enter ISBN</string>
    <string name="scan_isbn">Scan ISBN</string>
    <string name="isbn">ISBN:</string>
    <string name="author">Author:</string>
    <string name="description">Description:</string>
    <string name="year_published">Year Published:</string>
    <string name="favorite">Favorite</string>
    <string name="darkmode">Darkmode</string>
    <string name="app_version">Version: 1.0.22</string>
    <string name="app_description">Book Tracker is an app designed to allow readers to save, assign statuses to, and find books.</string>
    <string name="app_author">Made by Collin J. Johnson</string>
    <string name="isbn_s">ISBN: %s</string>
    <string name="use_darkmode">Use Darkmode:</string>
    <string name="settings">Settings</string>
</resources>